classDiagram
    class Owner {
        +name
        +time_available
        +preferences
        +pets
        +update_preferences()
        +add_pet()
        +get_all_tasks()
        +view_today_plan()
    }

    class Pet {
        +name
        +species
        +age
        +care_notes
        +tasks
        +add_task()
        +remove_task()
        +list_upcoming_needs()
        +mark_task_complete()
    }

    class Task {
        +name
        +category
        +duration
        +priority
        +frequency
        +time
        +due_date
        +required_today
        +completed
        +mark_complete()
        +is_due_today()
        +next_due_date()
        +create_next_occurrence()
        +fits_schedule()
        +describe_reason()
    }

    class Scheduler {
        +owner
        +available_time
        +pets
        +tasks
        +get_available_time()
        +generate_daily_plan()
        +sort_by_priority()
        +sort_by_time()
        +filter_tasks_by_status()
        +filter_tasks_by_pet()
        +mark_task_complete()
        +detect_conflicts()
        +filter_unfit_tasks()
        +explain_plan()
    }

    Owner "1" --> "0..*" Pet : has
    Pet "1" --> "0..*" Task : has
    Scheduler --> Owner : uses
    Scheduler ..> Pet : reads pets
    Scheduler ..> Task : sorts and filters
